Fix Layout Overlap

--- a/src/components/Story/Story.css
+++ b/src/components/Story/Story.css
@@ -4,12 +4,6 @@
     padding-top: 6rem;
     padding-bottom: 8rem;
     position: relative;
-    /* background-image: url('../../assets/img/bg-flower.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%; */
 }
 
 .story img.bunga-bg{
@@ -46,6 +40,11 @@
         flex-direction: row;
     }
 
+    .row-picture{
+        margin-top: 4em;
+        margin-bottom: 4em;
+    }
+
 @media (max-width:576px){
 
     .story img.picture{
@@ -54,13 +53,9 @@
         margin-top: 2em;
     }
 
-    .story img.bunga-bg{
-        width: 300px;
-        height:3n 00px;
-    }
-
     .row-story .data-2{
         order: -1;
         margin-bottom: 2em;
     }
+
 }
